Reset wifi security when changing edited connection

initialize() sets m_wifiSecurity for Wifi connections, but doesn't null it when it's not a wifi connection

That means when switching from a wifi to non-wifi connection m_wifiSecurity will not be changed

This will cause onAllUsersChanged to do things it shouldn't do

BUG: 463753